--- a/views/c-invitation.hbs
+++ b/views/c-invitation.hbs
@@ -1,11 +1,19 @@
 <html>
+  <style>
+    body { color: #333333; font-family: arial; max-width: 650px; margin: 0 auto;
+    padding: 0 16px; display: flex; flex-direction: column; min-height: 100vh;
+    line-height: 1.6; } .content-wrap { background-color: #fff; box-shadow: 0px
+    0px 10px rgba(0, 0, 0, 0.1); margin: 20px auto; max-width: 600px;
+    border-radius: 5px; } .content { padding: 20px; } .content div { font-size:
+    18px; margin-bottom: 10px; } .content a { color: #007bff; text-decoration:
+    none; } ul { list-style-type: none; margin-left: 20px; padding-left: 0; } ul
+    li { margin-bottom: 5px; } .content > div:last-child { margin-top: 20px; }
+    .title { background-color: #008000; font-size: 18px; color: #ffffff;
+    padding: 20px; } .title-detail { font-weight: 600; } .name { font-weight:
+    600; } .logo { width: 100px; height: 100px; } .footer { display: flex;
+    justify-content: space-between; align-items: center; }
 
-  <head>
-    <title>Weather</title>
-    <link rel="icon" href="/img/weather.png" />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <script src="/js/app.js"></script>
-  </head>
+  </style>
 
   <body>
     <div class="content-wrap">
@@ -34,7 +42,7 @@
         <div>
           Nếu bạn có bất kỳ câu hỏi hoặc cần hỗ trợ thêm, xin vui lòng liên hệ
           với chúng tôi qua địa chỉ email
-          <a href="mailto:developer@iquiz.vn">developer@iquiz.vn</a>
+          <a href="mailto:support@iquiz.vn">support@iquiz.vn</a>
         </div>
 
         <div class="footer">
@@ -42,10 +50,94 @@
             <div>
               Trân trọng,
             </div>
-            <div>iquiz</div>
+            <div>iquiz.vn</div>
           </div>
-          <div >
-            <img class="logo" src="logo.svg" />
+          <div>
+            <svg
+              class="logo"
+              xmlns="http://www.w3.org/2000/svg"
+              version="1.1"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              xmlns:svgjs="http://svgjs.dev/svgjs"
+              width="1000"
+              height="623"
+              viewBox="0 0 1000 623"
+            ><g
+                transform="matrix(1,0,0,1,-0.6060606060606233,0.2522267206477409)"
+              ><svg
+                  viewBox="0 0 396 247"
+                  data-background-color="#ffffff"
+                  preserveAspectRatio="xMidYMid meet"
+                  height="623"
+                  width="1000"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                ><g
+                    id="tight-bounds"
+                    transform="matrix(1,0,0,1,0.2400000000000091,-0.09999999999999432)"
+                  ><svg
+                      viewBox="0 0 395.52 247.2"
+                      height="247.2"
+                      width="395.52"
+                    ><g><svg></svg></g><g><svg
+                          viewBox="0 0 395.52 247.2"
+                          height="247.2"
+                          width="395.52"
+                        ><g
+                            transform="matrix(1,0,0,1,75.54432,55.1907926803014)"
+                          ><svg
+                              viewBox="0 0 244.43135999999998 136.8184146393972"
+                              height="136.8184146393972"
+                              width="244.43135999999998"
+                            ><g><svg
+                                  viewBox="0 0 244.43135999999998 136.8184146393972"
+                                  height="136.8184146393972"
+                                  width="244.43135999999998"
+                                ><g><svg
+                                      viewBox="0 0 244.43135999999998 136.8184146393972"
+                                      height="136.8184146393972"
+                                      width="244.43135999999998"
+                                    ><g><svg
+                                          viewBox="0 0 244.43135999999998 136.8184146393972"
+                                          height="136.8184146393972"
+                                          width="244.43135999999998"
+                                        ><g id="textblocktransform"><svg
+                                              viewBox="0 0 244.43135999999998 136.8184146393972"
+                                              height="136.8184146393972"
+                                              width="244.43135999999998"
+                                              id="textblock"
+                                            ><g><svg
+                                                  viewBox="0 0 244.43135999999998 136.8184146393972"
+                                                  height="136.8184146393972"
+                                                  width="244.43135999999998"
+                                                ><g
+                                                    transform="matrix(1,0,0,1,0,0)"
+                                                  ><svg
+                                                      width="244.43135999999998"
+                                                      viewBox="1.7999999523162842 -39 92.88999938964844 52"
+                                                      height="136.8184146393972"
+                                                      data-palette-color="#31c48d"
+                                                    ><path
+                                                        d="M19.65-2L19.65 0 1.8 0 1.8-2Q3.5-2.05 4.53-2.33 5.55-2.6 6.1-3.35 6.65-4.1 6.85-5.48 7.05-6.85 7.05-9.2L7.05-9.2 7.05-29.3Q7.05-31.4 6.88-32.77 6.7-34.15 6.2-34.95 5.7-35.75 4.78-36.08 3.85-36.4 2.3-36.5L2.3-36.5 2.3-38.5 19.15-38.5 19.15-36.5Q17.6-36.4 16.68-36.08 15.75-35.75 15.25-34.95 14.75-34.15 14.58-32.77 14.4-31.4 14.4-29.3L14.4-29.3 14.4-9.2Q14.4-6.85 14.58-5.48 14.75-4.1 15.33-3.35 15.9-2.6 16.93-2.33 17.95-2.05 19.65-2L19.65-2ZM44.45-39L44.45-39Q49-39 52.95-37.45 56.9-35.9 59.82-33.18 62.75-30.45 64.42-26.78 66.1-23.1 66.1-18.9L66.1-18.9Q66.1-13.75 63.57-9.43 61.05-5.1 56.5-2.15L56.5-2.15Q55.65-1.6 54.87-1.18 54.1-0.75 53.1-0.3 52.1 0.15 50.77 0.65 49.45 1.15 47.6 1.8L47.6 1.8Q46.5 2.2 45.72 2.5 44.95 2.8 44.35 3.08 43.75 3.35 43.27 3.63 42.8 3.9 42.35 4.2L42.35 4.2 42.35 4.4Q42.7 4.35 43.25 4.33 43.8 4.3 44.3 4.3L44.3 4.3Q46.45 4.3 48.37 4.78 50.3 5.25 52.17 5.8 54.05 6.35 55.95 6.83 57.85 7.3 59.95 7.3L59.95 7.3Q62.35 7.3 63.7 6.45 65.05 5.6 65.8 3.6L65.8 3.6 67.65 3.6Q67.75 4.25 67.8 4.8 67.85 5.35 67.85 5.75L67.85 5.75Q67.85 7.3 67.15 8.63 66.45 9.95 65.2 10.93 63.95 11.9 62.25 12.45 60.55 13 58.6 13L58.6 13Q55.8 13 53.4 12.05 51 11.1 48.8 9.95 46.6 8.8 44.6 7.85 42.6 6.9 40.65 6.9L40.65 6.9Q39.3 6.9 38.45 7.35 37.6 7.8 36.92 8.33 36.25 8.85 35.57 9.3 34.9 9.75 33.95 9.75L33.95 9.75Q33.1 9.75 32.6 9.35 32.1 8.95 32.1 8.35L32.1 8.35Q32.1 7.5 32.87 6.78 33.65 6.05 35.75 4.9L35.75 4.9 42.05 1.35Q38.05 1 34.6-0.7 31.15-2.4 28.62-5.1 26.1-7.8 24.65-11.33 23.2-14.85 23.2-18.85L23.2-18.85Q23.2-23.1 24.82-26.8 26.45-30.5 29.3-33.2 32.15-35.9 36.05-37.45 39.95-39 44.45-39ZM44.45-1.5L44.45-1.5Q47.4-1.5 49.8-2.73 52.2-3.95 53.87-6.2 55.55-8.45 56.47-11.65 57.4-14.85 57.4-18.75L57.4-18.75Q57.4-22.65 56.47-25.8 55.55-28.95 53.87-31.15 52.2-33.35 49.8-34.55 47.4-35.75 44.45-35.75L44.45-35.75Q41.5-35.75 39.17-34.58 36.85-33.4 35.25-31.2 33.65-29 32.77-25.85 31.9-22.7 31.9-18.75L31.9-18.75Q31.9-14.75 32.77-11.55 33.65-8.35 35.27-6.13 36.9-3.9 39.22-2.7 41.55-1.5 44.45-1.5ZM94.69-8.5L94.09 0 69.39 0 69.39-1.15 85.05-23.85 80.44-23.85Q78.3-23.85 76.94-23.68 75.59-23.5 74.77-22.93 73.94-22.35 73.52-21.35 73.09-20.35 72.8-18.7L72.8-18.7 70.84-18.7 71.44-26.5 94-26.5 94-25.35 78.59-2.7 83-2.7Q85.59-2.7 87.3-2.93 89-3.15 90.05-3.78 91.09-4.4 91.69-5.53 92.3-6.65 92.75-8.5L92.75-8.5 94.69-8.5Z"
+                                                        opacity="1"
+                                                        transform="matrix(1,0,0,1,0,0)"
+                                                        fill="#31c48d"
+                                                        class="wordmark-text-0"
+                                                        data-fill-palette-color="primary"
+                                                        id="text-0"
+                                                      ></path></svg></g></svg></g></svg></g></svg></g></svg></g></svg></g></svg></g><g
+                          ><path
+                              d="M245.816 0c68.262 0 123.6 55.338 123.6 123.6 0 68.262-55.338 123.6-123.6 123.6-35.553 0-67.6-15.011-90.149-39.041h8.664c21.117 20.354 49.839 32.872 81.485 32.872 64.855 0 117.431-52.576 117.43-117.431 0-64.855-52.576-117.431-117.43-117.431-31.646 0-60.368 12.518-81.485 32.872l-8.664 0c22.549-24.03 54.596-39.041 90.149-39.041z"
+                              fill="#31c48d"
+                              stroke="transparent"
+                              data-fill-palette-color="tertiary"
+                            ></path></g></svg></g><defs></defs></svg><rect
+                      width="395.52"
+                      height="247.2"
+                      fill="none"
+                      stroke="none"
+                      visibility="hidden"
+                    ></rect></g></svg></g></svg>
           </div>
         </div>
       </div>
