--- a/views/x-invitation.hbs
+++ b/views/x-invitation.hbs
@@ -19,21 +19,21 @@
   <body>
     <div class="content-wrap">
 
-      <div class="title">Thư mời tham gia vào khóa thi</div>
+      <div class="title">Thư mời tham gia khóa thi</div>
 
       <div class="content">
 
         <div>Chào <span class="name">{{name}}</span>,</div>
 
         <div>Chúng tôi xin mời bạn tham gia vào khóa thi
-          <span class="name">{{testName}}</span>.
+          <span class="name">{{execution.name}}</span>.
         </div>
 
         <div>Thông tin chi tiết về khóa thi: </div>
         <ul>
-          <li><span class="title-detail">Tên khóa thi:</span> {{testName}}</li>
-          <li><span class="title-detail">Mã khóa thi:</span> {{code}} </li>
-          <li><span class="title-detail">Mô tả:</span> {{description}}</li>
+          <li><span class="title-detail">Tên khóa thi:</span> {{execution.name}}</li>
+          <li><span class="title-detail">Mã khóa thi:</span> {{execution.code}} </li>
+          <li><span class="title-detail">Mô tả:</span> {{execution.description}}</li>
           <li><span class="title-detail">Đường link tham gia:</span>
             <a href="{{link}}" target="_blank">{{link}}</a>
           </li>
